--- a/_posts/2018-05-01-hello-world.html
+++ b/_posts/2018-05-01-hello-world.html
@@ -10,3 +10,9 @@ categories: jekyll update
 <p>While this is hardly the first blog post that I've written, it's one of the first I've written in quite a few years. I have a single blog post on Medium that I wrote during my bootcamp days that I plan on adjusting, updating and polishing before moving it here, but otherwise, it's been years since I wrote much for the world.
 </p>
 
+<p>I'm writing this one now before I get all nervous and decide not to do it yet. I always worry so much about what my blog looks like that I end up not wanting to make posts. In order to combat this, I thought I'd blog about what making a blog is like. If you're reading this on the date it was published, or close to it, it'll look something like this:</p>
+
+<img src="https://www.dropbox.com/s/6yawnhhdrnyu5ki/Screenshot%202018-04-28%2021.14.04.png?dl=0">
+
+
+
