--- a/_posts/2018-05-01-hello-world.html
+++ b/_posts/2018-05-01-hello-world.html
@@ -12,7 +12,7 @@ categories: jekyll update
 
 <p>I'm writing this one now before I get all nervous and decide not to do it yet. I always worry so much about what my blog looks like that I end up not wanting to make posts. In order to combat this, I thought I'd blog about what making a blog is like. If you're reading this on the date it was published, or close to it, it'll look something like this:</p>
 
-<img src="https://www.dropbox.com/s/6yawnhhdrnyu5ki/Screenshot%202018-04-28%2021.14.04.png?dl=0">
+<img src="https://www.dropbox.com/s/6yawnhhdrnyu5ki/Screenshot%202018-04-28%2021.14.04.png">
 
 
 
