updated hello world.. again

--- a/_posts/2018-04-25-hello-world.html
+++ b/_posts/2018-04-25-hello-world.html
@@ -5,7 +5,6 @@ date:   2018-04-25 11:43:50 -0700
 categories: jekyll update
 ---
 
-<h1>Hello World!</h1>
 <p>Hi world.</p>
 <p>While this is hardly the first blog post that I've written, it's one of the first I've written in quite a few years. I have a single blog post on Medium that I wrote during my bootcamp days that I plan on adjusting, updating and polishing before moving it here, but otherwise, it's been years since I wrote much for the world.
 </p>
@@ -14,7 +13,7 @@ categories: jekyll update
 
 <img src="/assets/img/04-28-18.png">
 
-<p>It is currently incredibly boring and still has boilerplate text in the footer as well as on the About page. This ought to be a bad look. But I've been an educator. I learned so much more about my students levels of comprehension on a topic when I got to watch their process. So I'm hoping that by blogging my through making this blog, I can pass along some important information for people who want to do something similar. With any luck, we'll all learn something along the way.</p>
+<p>It is currently incredibly boring and still has boilerplate text in the footer as well as on the About page. This ought to be a bad look. But I've been an educator. I learned so much more about my students levels of comprehension on a topic when I got to watch their process. So I'm hoping that by blogging my way through making this blog, I can pass along some important information for people who want to do something similar. With any luck, we'll all learn something along the way.</p>
 
 <h3>The current plan for posts, subject to change:</h3>
 <ol>
@@ -25,5 +24,7 @@ categories: jekyll update
   <li>Process for building the theme</li>
   <li>Getting theme installed</li>
 </ol>
+
+
 
 
