--- a/_posts/2018-04-25-hello-world.html
+++ b/_posts/2018-04-25-hello-world.html
@@ -9,15 +9,16 @@ categories: jekyll update
 <p>While this is hardly the first blog post that I've written, it's one of the first I've written in quite a few years. I have a single blog post on Medium that I wrote during my bootcamp days that I plan on adjusting, updating and polishing before moving it here, but otherwise, it's been years since I wrote much for the world.
 </p>
 
-<p>I'm writing this one now before I get all nervous and decide not to do it yet. I always worry so much about what my blog looks like that I end up not wanting to make posts. In order to combat this, I thought I'd blog about what making a blog is like. If you're reading this on the date it was published, or close to it, it'll look something like this:</p>
+<p>I'm writing this one now before I get all nervous and decide not to do it. I always worry so much about what my blog looks like that I end up not wanting to make posts. In order to combat this, I thought I'd blog about what making a blog is like. If you're reading this on the date it was published, or close to it, it'll look something like this:</p>
 
-<img src="/assets/img/04-28-18.png">
+<img src="/assets/img/04-28-18.png" style="border: solid black 1px;">
 
 <p>It is currently incredibly boring and still has boilerplate text in the footer as well as on the About page. This ought to be a bad look. But I've been an educator. I learned so much more about my students levels of comprehension on a topic when I got to watch their process. So I'm hoping that by blogging my way through making this blog, I can pass along some important information for people who want to do something similar. With any luck, we'll all learn something along the way.</p>
 
 <h3>The current plan for posts, subject to change:</h3>
 <ol>
-  <li>Jekyll & github sites setup</li>
+  <li>Writing an about me blurb</li>
+  <li>Jekyll and github sites setup</li>
   <li>Thoughts on themes</li>
   <li>Theme builder setup</li>
   <li>Design the theme</li>
