fixed paragraph in hello world post

--- a/_posts/2018-04-25-hello-world.html
+++ b/_posts/2018-04-25-hello-world.html
@@ -1,7 +1,7 @@
 ---
 layout: post
 title:  "Hello World"
-date:   2018-04-25 11:43:50 -0700
+date:   2018-05-01
 categories: jekyll update
 ---
 
@@ -13,7 +13,7 @@ categories: jekyll update
 
 <img src="/assets/img/04-28-18.png" style="border: solid black 1px;">
 
-<p>It is currently incredibly boring and still has boilerplate text in the footer as well as on the About page. This ought to be a bad look. But I've been an educator. I learned so much more about my students levels of comprehension on a topic when I got to watch their process. So I'm hoping that by blogging my way through making this blog, I can pass along some important information for people who want to do something similar. With any luck, we'll all learn something along the way.</p>
+<p>It is currently the default theme and even still has boilerplate text in the footer as well as on the about page. This ought to be a bad look. But I've been an educator. I learned so much more about my students levels of comprehension on a topic when I got to watch their process. I also learned so much more by teaching than by simply being a student myself. So I'm hoping that by blogging my way through making this blog, I can pass along some important information for people who want to do something similar. With any luck, we'll all learn something along the way.</p>
 
 <h3>The current plan for posts, subject to change:</h3>
 <ol>
